<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group.join.JoinGroupFragment">

    <ImageView
        android:id="@+id/imageViewJoinGroupLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_96dp"
        android:contentDescription="@string/location"
        android:src="@drawable/ic_location_auth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreateGroupDescription"
        style="@style/DescriptionTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:gravity="center"
        android:minLines="3"
        android:text="@string/join_group_description"
        app:layout_constraintTop_toBottomOf="@id/imageViewJoinGroupLocation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldJoinGroupInviteCode"
        style="@style/EditText.Togather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:hint="@string/invite_code"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateGroupDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputJoinGroupInviteCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonJoinGroupJoin"
        style="@style/Widget.App.RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_xxxlarge"
        android:text="@string/join_group"
        app:layout_constraintTop_toBottomOf="@id/textFieldJoinGroupInviteCode" />

</androidx.constraintlayout.widget.ConstraintLayout>