<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardNextEvent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorSurfaceContainer"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="@dimen/spacing_4dp"
    app:strokeColor="@color/colorOutline"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <ImageView
            android:id="@+id/imageViewNextEventLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/jungle"
            android:src="@drawable/ic_avatar_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEventNextEvent"
            style="@style/HeaderTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_event"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jungle"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewNextEventLayout" />

        <TextView
            android:id="@+id/textViewEventDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/jungle_of_3_event"
            android:textColor="?colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewEventName" />

        <ImageView
            android:id="@+id/imageViewNavigateDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_12dp"
            android:contentDescription="@string/navigate"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewNextEventLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
