<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <include
        android:id="@+id/layoutHomeNextEvent"
        layout="@layout/layout_next_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonHomeGroupsOrEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/layoutHomeNextEvent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonHomeGroups"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_toggle_button_checked"
            android:text="@string/groups" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonHomeEvents"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_toggle_button_checked"
            android:text="@string/events" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/textViewHomeNoGroup"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/no_group_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toggleButtonHomeGroupsOrEvents" />

    <TextView
        android:id="@+id/textViewHomeNoEvent"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/no_event_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toggleButtonHomeGroupsOrEvents" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHomeGroups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/spacing_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButtonHomeGroupsOrEvents"
        tools:itemCount="5"
        tools:listitem="@layout/item_group_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHomeEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/toggleButtonHomeGroupsOrEvents"
        tools:listitem="@layout/item_event_card" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabHomeCreateGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_12dp"
        android:backgroundTint="@color/colorSurfaceContainerHigh"
        android:contentDescription="@string/create"
        android:text="@string/create_group"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineCenterHorizontally" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterHorizontally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabHomeCreateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_12dp"
        android:backgroundTint="@color/colorSurfaceContainerHigh"
        android:contentDescription="@string/create"
        android:text="@string/create_event"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineCenterHorizontally" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabHomeJoinGroup"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_12dp"
        android:backgroundTint="@color/colorSurfaceContainerHigh"
        android:contentDescription="@string/join_group"
        android:text="@string/join_group"
        android:textColor="@color/colorPrimary"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/fabHomeCreateGroup"
        app:layout_constraintEnd_toEndOf="@id/fabHomeCreateGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>